# raspimonitor

./: Makefile  README.md  main.py  pyproject.toml  raspimonitor.py  requirements-dev.txt  requirements.txt
.github/: release-drafter.yml
.github/workflows/: ci.yml  codeql.yml  publish-release.yml
raspimonitor/: __init__.py  main.py  raspimonitor.py
